# ez-ha

./: .env.example  CHANGELOG.md  LICENSE  README.md  ignore-spelling-words.txt  pyproject.toml  repository.yaml  skills-lock.json
addon/: DOCS.md  Dockerfile  build.yaml  config.yaml
addon/rootfs/etc/cont-init.d/: 00-setup.sh  01-vpn-setup.sh
addon/rootfs/etc/services.d/openvpn/: finish  run
addon/rootfs/etc/services.d/ttyd/: finish  run
addon/rootfs/root/: .zshrc  CLAUDE.md
addon/rootfs/root/.config/: starship.toml
skills/ez-ha/: SKILL.md
skills/ez-ha/scripts/: ha.py
skills/ez-ssh/: SKILL.md
skills/ez-ui/: SKILL.md
skills/ez-ui/scripts/: browser-login.mjs
